deploy/k8s/overlays/minikube/thirdparty/kibana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.17.2
          resources:
            limits:
              memory: "1Gi"
              cpu: "1500m"
            requests:
              memory: "1Gi"
              cpu: "250m"
          ports:
            - name: kibana
              containerPort: 5601
          volumeMounts:
            - name: kibana-config
              mountPath: /usr/share/kibana/config
      volumes:
        - name: kibana-config
          configMap:
            name: kibana-config
