deploy/k8s/overlays/minikube/thirdparty/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: kibana
  ports:
    - name: kibana
      port: 5601
      targetPort: 5601
      protocol: TCP
